--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,27 +13,23 @@
         android:layout_height="wrap_content"
         android:text="SELFIDENT REPORT"
         android:layout_marginBottom="100dp"/>
-
-    <Spinner
-        android:id="@+id/SpinnerNamaSekolah"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nama Sekolah : "/>
-    <EditText
+    <Spinner
+        android:id="@+id/SpinnerNamaSekolah"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/edNamaSekolah"/>
+        android:layout_height="wrap_content"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nama Kelas"/>
-    <EditText
+    <Spinner
+        android:id="@+id/SpinnerNamaKelas"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/edNamaKelas"/>
+        android:layout_height="wrap_content"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
